#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_INIT(4ipnet-automake, 1.0, 4ipnet.com)
AM_INIT_AUTOMAKE

AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h unistd.h])
# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
